cabal-version:   1.18
name:            cue-sheet
version:         2.0.1
license:         BSD3
license-file:    LICENSE.md
maintainer:      Mark Karpov <markkarpov92@gmail.com>
author:          Mark Karpov <markkarpov92@gmail.com>
tested-with:     ghc ==8.6.5 ghc ==8.8.4 ghc ==8.10.1
homepage:        https://github.com/mrkkrp/cue-sheet
bug-reports:     https://github.com/mrkkrp/cue-sheet/issues
synopsis:
    Support for construction, rendering, and parsing of CUE sheets

description:
    Support for construction, rendering, and parsing of CUE sheets.

category:        Audio
build-type:      Simple
data-files:      cue-sheet-samples/*.cue
extra-doc-files:
    CHANGELOG.md
    README.md

source-repository head
    type:     git
    location: https://github.com/mrkkrp/cue-sheet.git

flag dev
    description: Turn on development settings.
    default:     False
    manual:      True

library
    exposed-modules:
        Text.CueSheet
        Text.CueSheet.Types
        Text.CueSheet.Parser
        Text.CueSheet.Render

    default-language: Haskell2010
    build-depends:
        QuickCheck >=2.4 && <3.0,
        base >=4.12 && <5.0,
        bytestring >=0.10.8 && <0.11,
        containers >=0.5 && <0.7,
        exceptions >=0.6 && <0.11,
        megaparsec >=7.0 && <10.0,
        mtl >=2.0 && <3.0,
        text >=0.2 && <1.3

    if flag(dev)
        ghc-options: -Wall -Werror

    else
        ghc-options: -O2 -Wall

    if flag(dev)
        ghc-options:
            -Wcompat -Wincomplete-record-updates -Wincomplete-uni-patterns
            -Wnoncanonical-monad-instances

test-suite tests
    type:             exitcode-stdio-1.0
    main-is:          Spec.hs
    build-tools:      hspec-discover >=2.0 && <3.0
    hs-source-dirs:   tests
    other-modules:
        Text.CueSheet.ParserSpec
        Text.CueSheet.RenderSpec
        Text.CueSheet.TypesSpec

    default-language: Haskell2010
    build-depends:
        QuickCheck >=2.4 && <3.0,
        base >=4.12 && <5.0,
        bytestring >=0.10.8 && <0.11,
        cue-sheet -any,
        exceptions >=0.6 && <0.11,
        hspec >=2.0 && <3.0,
        hspec-megaparsec >=2.0 && <3.0,
        megaparsec >=7.0 && <10.0,
        text >=0.2 && <1.3

    if flag(dev)
        ghc-options: -Wall -Werror

    else
        ghc-options: -O2 -Wall
